[package]
name = "dwarf-location-consistency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gimli = { version = "0.26", default-features = false, features = ["read", "std", "endian-reader"] }
fallible-iterator = { version = "0.2", default-features = false }
object = { version = "0.26", default-features = false, features = ["read", "std", "compression"] }
smallvec = { version = "1", default-features = false }
rustc-demangle = { version = "0.1" }
cpp_demangle = { version = "0.3", default-features = false }
memmap = "0.7"
clap = "2"
typed-arena = "2"
